src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}
.mainDiv {
  display: flex;

  justify-content: center;
}
.midleDiv {
  box-sizing: border-box;
  width: 50px;
  height: 50px;
  background-color: yellow;
  position: absolute;
}
.div1 {
  grid-area: 2 / 3 / 3 / 4;
}
.div2 {
  grid-area: 4 / 3 / 5 / 4;
}
.div3 {
  grid-area: 3 / 2 / 4 / 3;
}
.div4 {
  grid-area: 3 / 4 / 4 / 5;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

